{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 44,
  "lineage": "d871a988-8cf2-7c48-1d79-2a43225aeb48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myec2Eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0917e10bb18f23a9e",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-236-50-141.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.50.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00798d7180f25aac2",
            "arn": "arn:aws:ec2:eu-west-3:981438706481:instance/i-037b75ac2fee122dc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037b75ac2fee122dc",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "docker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdf4f6ca10c3ffc9",
            "private_dns": "ip-172-16-19-106.eu-west-3.compute.internal",
            "private_ip": "172.16.19.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093bab7464cda595f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05b2fef3122a7d9cc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018198d200712c7e4",
            "tags": {
              "Name": "ec2-damien"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b2fef3122a7d9cc"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_allow_from_admin",
            "aws_subnet.public_subnet1",
            "aws_vpc.app_vpc",
            "data.aws_ami.latest-amazon-ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:981438706481:internet-gateway/igw-0bcd7dc893c79757a",
            "id": "igw-0bcd7dc893c79757a",
            "owner_id": "981438706481",
            "tags": {
              "Name": "gatewayInternet"
            },
            "vpc_id": "vpc-0945ca5e7cfef176a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0524fb148584c005c",
            "owner_id": "981438706481",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcd7dc893c79757a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0945ca5e7cfef176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc83aba7fb1d0db6",
            "route_table_id": "rtb-0524fb148584c005c",
            "subnet_id": "subnet-018198d200712c7e4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062efca7a803a3d80",
            "route_table_id": "rtb-0524fb148584c005c",
            "subnet_id": "subnet-0d9083449fa844158"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet2",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_allow_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:981438706481:security-group/sg-05b2fef3122a7d9cc",
            "description": "Allow SSH from admin",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b2fef3122a7d9cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "91.168.227.109/32"
                ],
                "description": "Admin SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "91.168.227.109/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "91.168.227.109/32"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssh_allow_from_admin",
            "name_prefix": "",
            "owner_id": "981438706481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_allow_from_admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0945ca5e7cfef176a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:981438706481:subnet/subnet-018198d200712c7e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.16.16.0/20",
            "id": "subnet-018198d200712c7e4",
            "map_public_ip_on_launch": false,
            "owner_id": "981438706481",
            "tags": {
              "Name": "tf-example"
            },
            "vpc_id": "vpc-0945ca5e7cfef176a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:981438706481:subnet/subnet-0d9083449fa844158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.16.32.0/20",
            "id": "subnet-0d9083449fa844158",
            "map_public_ip_on_launch": false,
            "owner_id": "981438706481",
            "tags": {
              "Name": "tf-example"
            },
            "vpc_id": "vpc-0945ca5e7cfef176a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:981438706481:vpc/vpc-0945ca5e7cfef176a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-02e4dfe31d72a3150",
            "default_route_table_id": "rtb-0142bd6304c663c0b",
            "default_security_group_id": "sg-0425c6df8eae9944d",
            "dhcp_options_id": "dopt-fb94c792",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0945ca5e7cfef176a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0142bd6304c663c0b",
            "owner_id": "981438706481",
            "tags": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}